syntax = 'proto3';

package chatgroup;

message Member {
    string name = 1;
    string ip = 2;
    string port = 3;
}

message MemberList {
    // creates a slice of Member
    repeated Member member = 1;
}

message Message {
    Member  sender = 1;
    string  text = 2;
}

// Empty message type used for List method
message Void {}

// Service definition for gRPC plugin to publish messages and handle subscriptions
service Publisher {
    rpc ListSubscriber(Void) returns (MemberList) {}
    rpc Subscribe(Member) returns (Member) {}
    rpc Unsubscribe(Member) returns (Member) {}
    rpc Publish(Message) returns (MemberList) {}
}

// Service definition for gRPC plugin to display messages
service Displayer {
    rpc DisplayText(Message) returns (Message) {}
    rpc DisplaySubscription(Member) returns (Member) {}
    rpc DisplayUnsubscription(Member) returns (Member) {}
}